[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm>=9",
    "setuptools>=80",
]

[project]
authors = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: OpenStudioLandscapes",
    "Programming Language :: Python",
]
dependencies = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes",
    "OpenStudioLandscapes-OpenCue @ git+https://github.com/michimussato/OpenStudioLandscapes-OpenCue",
    "PyYAML",
    "dagster==1.9.11",
    "docker-compose-graph @ git+https://github.com/michimussato/docker-compose-graph.git",
    "email-validator",
    "gitpython",
    "importlib-metadata; python_version<\"3.8\"",
    "snakemd",
]
description = "OpenCue-Worker Feature for OpenStudioLandscapes (dep: OpenStudioLandscapes-OpenCue)"
dynamic = [
    "version",
]
license-files = [
    "LICENSE.txt",
]
maintainers = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
name = "OpenStudioLandscapes-OpenCue-Worker"
requires-python = ">=3.11"

[project.entry-points]

[project.optional-dependencies]
coverage = [
    "coverage",
    "pytest",
]
dev = [
    "OpenStudioLandscapes-OpenCue-Worker[coverage]",
    "OpenStudioLandscapes-OpenCue-Worker[lint]",
    "OpenStudioLandscapes-OpenCue-Worker[nox]",
    "OpenStudioLandscapes-OpenCue-Worker[readme]",
    "OpenStudioLandscapes-OpenCue-Worker[sbom]",
    "OpenStudioLandscapes-OpenCue-Worker[testing]",
]
graphviz = [
    "graphviz",
    "pipdeptree",
]
lint = [
    "black",
    "isort",
    "pre-commit",
    "pylint",
]
nox = [
    "OpenStudioLandscapes-OpenCue-Worker[testing]",
    "nox",
]
pyproject = [
    "OpenStudioLandscapesUtil-VersionBumper @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-VersionBumper.git",
]
readme = [
    "OpenStudioLandscapesUtil-ReadmeGenerator @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-ReadmeGenerator.git",
]
sbom = [
    "OpenStudioLandscapes-OpenCue-Worker[graphviz]",
    "cyclonedx-bom",
]
testing = [
    "pytest",
    "pytest-cov",
    "setuptools",
]

[project.readme]
content-type = "text/markdown; charset=UTF-8"
file = "README.md"

[project.urls]
Homepage = "https://github.com/michimussato/OpenStudioLandscapes-OpenCue-Worker"

[tool.dagster]
code_location_name = "OpenStudioLandscapes-OpenCue-Worker"
module_name = "OpenStudioLandscapes.OpenCue_Worker.definitions"

[tool.setuptools]
include-package-data = true
packages = [
    "OpenStudioLandscapes.OpenCue_Worker",
]
platforms = [
    "Linux",
]

[tool.setuptools.package-dir]
"" = "src"
